edit GuidsTask, add bestmembertask