@@ -1,13 +1,14 @@
 package com.darkneees.discordfrontanalitycs.Tasks;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.function.Supplier;
 
-public class GetDataSupplier implements Supplier<String> {
+public class GetDataSupplier implements Supplier<HttpResponse<String>> {
 
     private String urlString;
 
@@ -15,34 +16,19 @@ public class GetDataSupplier implements Supplier<String> {
         this.urlString = urlString;
     }
 
-
     @Override
-    public String get() {
-        StringBuilder content = new StringBuilder();
+    public HttpResponse<String> get() {
         try {
-            BufferedReader in;
-            URL url = new URL(urlString);
-            HttpURLConnection con = (HttpURLConnection) url.openConnection();
-            con.setRequestMethod("GET");
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(new URI(urlString))
+                    .GET()
+                    .build();
 
-            int statusCode = con.getResponseCode();
-            if(statusCode >= 400) in = new BufferedReader(new InputStreamReader(con.getErrorStream()));
-            else in = new BufferedReader(
-                        new InputStreamReader(con.getInputStream()));
-
-            String inputLine;
-            while ((inputLine = in.readLine()) != null) {
-                content.append(inputLine);
-            }
-            in.close();
-            if(statusCode >= 400) throw new Exception(content.toString());
-            return content.toString();
-        }
-        catch (IOException e) {
-            e.printStackTrace();
-        } catch (Exception e) {
+            return HttpClient.newBuilder()
+                    .build()
+                    .send(request, HttpResponse.BodyHandlers.ofString());
+        } catch (URISyntaxException | InterruptedException | IOException e) {
             throw new RuntimeException(e);
         }
-        return null;
     }
 }
